; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/extr_khrn_client.c_client_thread_attach.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/extr_khrn_client.c_client_thread_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"CLIENT_THREAD_STATE_T\00", align 1
@client_tls = common dso_local global i32 0, align 4
@KHR_SUCCESS = common dso_local global i64 0, align 8
@client_tls_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @client_thread_attach() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = call i64 @khrn_platform_malloc(i32 4, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %4 = inttoptr i64 %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %16

8:                                                ; preds = %0
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @client_thread_state_init(i32* %9)
  %11 = load i32, i32* @client_tls, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @platform_tls_set(i32 %11, i32* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @client_send_make_current(i32* %14)
  store i32 1, i32* %1, align 4
  br label %16

16:                                               ; preds = %8, %7
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i64 @khrn_platform_malloc(i32, i8*) #1

declare dso_local i32 @client_thread_state_init(i32*) #1

declare dso_local i32 @platform_tls_set(i32, i32*) #1

declare dso_local i32 @client_send_make_current(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
